--- a/app/.htaccess
+++ b/app/.htaccess
@@ -1,3 +1,9 @@
 php_value memory_limit 128M
 php_value upload_max_filesize 64M
 php_value post_max_size 64M
+
+RewriteEngine On
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule ^ public/index.php [QSA,L]
+RewriteRule ^((?!public/).*)$ public/$1 [L,NC]
